# qa-automation-portfolio

./: .editorconfig  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  SECURITY.md  TESTING.md
.github/: dependabot.yml
api/: README.md  api_manager.py  conftest.py  pytest.ini  requirements.txt
app/: app.js  index.html  styles.css
backend/: requirements.txt
scripts/: record_demo.py  snap_allure.py
ui-vedro/: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  vedro.cfg.py
ui-vedro/contexts/: __init__.py  opened_board_page.py  opened_create_task_drawer.py  opened_edit_task_drawer.py
ui-vedro/dicts/: __init__.py  allure_labels.py  tags.py  task_status.py  translations.py
ui-vedro/helpers/: __init__.py  url_builder.py
ui-vedro/interfaces/web/pages/: page.py
ui-vedro/interfaces/web/pages/board/: __init__.py  board_page.py
ui-vedro/interfaces/web/pages/board/components/: tags_picker.py  task_drawer.py  task_list.py
ui-vedro/interfaces/web/web_elements/: __init__.py  base_button.py  base_element.py  base_input.py  base_text.py  mixins.py
ui-vedro/mocks/: __init__.py  mocked_create_task.py  mocked_route.py  mocked_tasks_list.py  mocked_update_task.py
ui-vedro/scenarios/board/: create_task_through_drawer.py  drawer_rejects_invalid_titles.py  edit_task_with_multi_tag_selection.py  save_failure_keeps_drawer_open_and_shows_error.py  search_input_debounces_keystrokes.py
ui-vedro/schemas/: __init__.py  error_response_schema.py  task_schema.py  tasks_list_response_schema.py
ui-vedro/scripts/: emit_allure_results.py
(+25 files in other folders)
